add: Nun Rendering der 3 Generationen möglich, außerdem Bilder der einzelnen Pokemon werden schon geladen. Es werden nachdem die erste Seite geladen ist, außerdem alle anderen Pokemon geladen -> Filter nun möglich und implementiert. Allerdings gibt es noch Probleme mit Paging während des Filterns und maximale Pokemon-Anzahl auf einer Seite.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 		<title>Pokedex API</title>
 	</head>
 	<body>
+		<label for="pet-select">Wähle eine Generation:</label>
+
+		<select name="gens" id="genSelect" onchange="changeGen()">
+			<option value="1">Generation 1</option>
+			<option value="2">Generation 2</option>
+			<option value="3">Generation 3</option>
+		</select>
+		<input id="filterInput" type="text" minlength="3" oninput="filterPokemon()" />
 		<div class="grid"></div>
-		<button onclick="testAgain()"></button>
+		<button onclick="nextPage()"></button>
 	</body>
 </html>
