--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="style.css" />
 		<script src="js/db.js" defer></script>
 		<script src="js/api.js" defer></script>
+		<script src="js/template.js" defer></script>
 		<script src="js/script.js" defer></script>
 		<title>Pokedex API</title>
 	</head>
