add: Der Name und die ID des Pokemon wird nun auf der Karte angezeigt. Außerdem visuell einiges gemacht: Hover-Effekte, Typen hinzugefügt, background-color basierend auf types. Des Weiteren Responsiveness für das main grid hinzugefügt.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/type-combos.css" />
 		<script src="js/db.js" defer></script>
 		<script src="js/helper.js" defer></script>
 		<script src="js/api.js" defer></script>
