add: Loading Spinner hinzugefügt. Außerdem nun Unterscheidung zwischen Filtered-View und Normal-View und außerdem noch ob es eine Empty-View ist. Somit kann man nun logisch abfragen in welcher Ansicht man sich befindet. Außerdem noch das Updaten der Page Buttons verbessert und debuggt, sodass nun die Buttons nur sichtbar sind, wenn sie gebraucht werden. Zudem noch Strukut in JS und CSS verändert.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="css/fonts.css" />
+		<link rel="stylesheet" href="css/base.css" />
+		<link rel="stylesheet" href="css/layout.css" />
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/type-combos.css" />
 		<script src="js/db.js" defer></script>
@@ -13,6 +16,22 @@
 		<title>Pokedex API</title>
 	</head>
 	<body>
+		<div id="loadingSpinner" class="d-none">
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+				<path
+					fill="currentColor"
+					d="M12,23a9.63,9.63,0,0,1-8-9.5,9.51,9.51,0,0,1,6.79-9.1A1.66,1.66,0,0,0,12,2.81h0a1.67,1.67,0,0,0-1.94-1.64A11,11,0,0,0,12,23Z"
+				>
+					<animateTransform
+						attributeName="transform"
+						dur="0.75s"
+						repeatCount="indefinite"
+						type="rotate"
+						values="0 12 12;360 12 12"
+					/>
+				</path>
+			</svg>
+		</div>
 		<header>
 			<div>
 				<label for="genSelect">Wähle eine Generation:</label>
@@ -32,10 +51,11 @@
 			/>
 		</header>
 		<main>
-			<section>
-				<div class="grid"></div>
-				<div class="buttons">
-					<button id="prevBtn" class="hidden" onclick="prevPage()">Vorherige Seite</button>
+			<section id="mainSection" data-view="grid">
+				<div class="view grid"></div>
+				<div class="pagination">
+					<button id="prevBtn" onclick="prevPage()">Vorherige Seite</button>
+					<span id="pageCount">Seite 1</span>
 					<button id="nextBtn" onclick="nextPage()">Nächste Seite</button>
 				</div>
 			</section>
