add: Readme angepasst.

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
 				</div>
 			</section>
 		</main>
-		<footer>Das ist ein Footer</footer>
+		<footer>
+			<span> Pokedex API von Calvin Hanisch.</span>
+			<a href="https://github.com/CalvinH-Dev/pokemon-app">Zum Github Repository.</a>
+		</footer>
 	</body>
 </html>
