smaller gradient adjustments, robots.txt

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="robots" content="noindex, nofollow, noarchive, nosnippet" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="shortcut icon" href="assets/pokemon_favicon.png" type="image/x-icon" />
 		<link rel="stylesheet" href="css/fonts.css" />
@@ -83,6 +84,7 @@
 		<footer>
 			<span> Pokedex API von Calvin Hanisch.</span>
 			<a href="https://github.com/CalvinH-Dev/pokemon-app">Zum Github Repository.</a>
+			<a href="https://hanisch-dev.de">Impressum auf der Hauptseite</a>
 		</footer>
 	</body>
 </html>
