--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<footer>
 			<span> Pokedex API von Calvin Hanisch.</span>
 			<a href="https://github.com/CalvinH-Dev/pokemon-app">Zum Github Repository.</a>
-			<a href="https://hanisch-dev.de">Impressum auf der Hauptseite</a>
+			<a href="https://hanisch-dev.de/legal">Impressum</a>
 		</footer>
 	</body>
 </html>
